@@ -17,6 +17,10 @@ New in spot 2.10.4.dev  (net yet released)
   - autcross learned a --language-complemented option to assist in the
     case one is testing tools that complement automata.  (issue #504).
 
+  - ltlsynt as a new option --tlsf that takes the filename of a TLSF
+    specification and calls syfco (which must be installed) to convert
+    it into an LTL formula.
+
   Library:
 
   - The new function suffix_operator_normal_form() implements
